<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".NewFieldActivity">

    <ImageView
        android:id="@+id/addPhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/fieldPhotoAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus" />

    <EditText
        android:id="@+id/fieldNameInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/fieldNameHint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/fieldLocationInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhoto"
        app:layout_goneMarginTop="10dp" />

    <EditText
        android:id="@+id/fieldLocationInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fieldLocationHint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/saveField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhoto"
        app:layout_goneMarginTop="10dp" />

    <Button
        android:id="@+id/saveField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:text="@string/addFieldButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>