<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".BookingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="15dp">

        <TextView
            android:id="@+id/newEventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/bookFieldTitle"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/bookDate"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:autofillHints="date"
                android:ems="10"
                android:inputType="date"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/addDateButton"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/dateSelect" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/bookTime"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:autofillHints="date"
                android:ems="10"
                android:inputType="date"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/addTimeButton"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/dateSelect" />

        </LinearLayout>

        <Button
            android:id="@+id/createBooking"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/createBooking" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>